--- a/index.html
+++ b/index.html
@@ -6,12 +6,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="css/resume.css" rel="stylesheet">
-    <script src="js/age-calc.js"></script>
-    <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
-            integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
-            crossorigin="anonymous">
-    </script>
 </head>
 <body class="main-page">
 <div class="container-fluid">
@@ -78,27 +72,8 @@
                 <h3 class="text-primary" id="skills">SKILLS AND ABILITIES</h3>
                 <section>
                     <ul class="row row-cols-3">
-                        <div class="col-md-4">
-                            <li>HTML</li>
-                            <li>CSS</li>
-                            <li>Javascript</li>
-                            <li>Ajax</li>
-                            <li>Bootstrap</li>
+                        <div id="skills-list" class="col-md-4">
 
-                        </div>
-                        <div class="col-md-4">
-                            <li>jQuery</li>
-                            <li>Computer Network Wiring</li>
-                            <li>General Aircraft Mechanic</li>
-                            <li>General Automotive Mechanic</li>
-                            <li>General Diesel Mechanic</li>
-                        </div>
-                        <div class="col-md-4">
-                            <li>Real Estate Investor Apprentice</li>
-                            <li>Nationally Certified Tow Operator</li>
-                            <li>General Household Electrical Wiring</li>
-                            <li>General Household Plumbing Work</li>
-                            <li>General Construction</li>
                         </div>
                     </ul>
                 </section>
@@ -108,16 +83,17 @@
             <section class="col-md-6">
                 <div class="mt-0 row row-md-2">
                     <h3 class="text-primary link"><a href="broken.html"> ACADEMIC</a></h3>
-                    <p class="link">To see where I've gone to school, click <a href="academic.html">here.</a></p>
+                    <p class="link">To see where I've gone to school, click <a href="broken.html">here.</a></p>
                     <h3 class="text-primary link"><a href="broken.html"> PROFESSIONAL EXPERIENCE</a></h3>
-                    <p class="link">To see where I've worked, click <a href="work-history.html">here.</a></p><br><br>
+                    <p class="link">To see where I've worked, click <a href="broken.html">here.</a></p><br><br>
                     <p></p>
                     <p></p>
                 </div>
             </section>
             <section class="col-md-6">
                 <h3 class="text-primary link"><a href="development_projects.html">DEVELOPMENT PROJECTS</a></h3>
-                <p class="link">To see development projects I've worked on, click <a href="development_projects.html">here.</a></p>
+                <p class="link">To see development projects I've worked on, click <a href="development_projects.html">here.</a>
+                </p>
                 <h3 class="text-primary link"><a href="awards_decorations.html">AWARDS AND DECORATIONS</a></h3>
                 <p class="link">To see my awards, decorations and personal achievements, click <a
                         href="awards_decorations.html">here.</a></p>
@@ -131,6 +107,12 @@
         </div>
     </div>
 </div>
+<script src="js/functions.js"></script>
+<script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+        crossorigin="anonymous">
+</script>
 <script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
