added projects from Go to development_projects

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="narrative">
             <h2>Full Stack Web Developer</h2>
-            <!--The id="age" is calculating the number of years I have held a job automatically so the website will update automatically.-->
+            <!--The id="age" is calculating the number of years I have held a job so the website will update automatically.-->
             <p>With over <span id="age"></span> years in a wide array of career fields I have had many experiences that
                 qualify me for many
                 jobs. I have worked in landscaping, construction, and electronics fields. I spent 23 years in the United
