--- a/development_projects.html
+++ b/development_projects.html
@@ -11,9 +11,12 @@
 <div>
     <ol>
         <a href="resume.html"><li>Resume web page</li></a>
-        <a href="https://github.com/mccloskey-hall-media-queries/media-queries-exercise"><li>Codeup Media Queries</li></a>
-        <a href="https://github.com/Neely-McCloskey/codeup-design-project"><li>Codeup Design Project</li></a>
-        <a href="https://github.com/orgs/McCloskey-Ramos-Coffee-Project/repositories"><li>Coffee Project</li></a>
+        <a href="https://github.com/MarcusandRalphorg/media-queries"><li>Codeup Media Queries Marcus/Ralph</li></a>
+        <a href="https://github.com/Leonard-Ralph-Jesse-org/responsive-site"><li>Codeup Responsive Site Leonard/Ralph/Jesse</li></a>
+        <a href="https://github.com/ortiz-mccloskey-urton-project/coffee-project"><li>Codeup Coffee Project Ortiz/McCloskey/Urton</li></a>
+        <a href="https://github.com/mccloskey-hall-media-queries/media-queries-exercise"><li>Codeup Media Queries McCloskey/Hall</li></a>
+        <a href="https://github.com/Neely-McCloskey/codeup-design-project"><li>Codeup Design Project Neely/McCloskey</li></a>
+        <a href="https://github.com/orgs/McCloskey-Ramos-Coffee-Project/repositories"><li>Coffee Project McCloskey/Ramos</li></a>
         <a href="https://github.com/Rafagithub135/Weathermap"><li>Weather Map</li></a>
     </ol>
 </div>
