added data to academic page

--- a/academic.html
+++ b/academic.html
@@ -19,7 +19,7 @@
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
                 </div>
                 <div class="col-md-9 codeup p-.5em background-color: #7CB342">
-                    <p class="w-100 align-content-center justify-content-center" style="color: yellow">Codeup San
+                    <p style="color: yellow">Codeup San
                         Antonio, Texas (Virtual)</p>
                     <p style="color: yellow">Full Stack Web Developer 2022 - 2023</p>
                 </div>
@@ -47,10 +47,10 @@
                     <img src="Images/CCAF_Icon.jpg" alt="Community College Of The Air Force Icon" class="image">
                 </div>
                 <div class="col-md-9 ccaf p-.5em background-color: #172C7F">
-                    <p style="color: white">Community College of The Air Force</p>
-                    <p style="color: white">Various Locations</p>
-                    <p style="color: white">Basic, Airman Leadership School</p>
-                    <p style="color: white">Aviation Mechanic, Aerial Port 1997 – 2012</p>
+                    <p>Community College of The Air Force</p>
+                    <p>Various Locations</p>
+                    <p>Basic, Airman Leadership School</p>
+                    <p>Aviation Mechanic, Aerial Port 1997 – 2012</p>
                 </div>
             </div>
             <div class="row">
@@ -58,9 +58,11 @@
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
                 <div class="col-md-9 usmc2 p-.5em background-color: #DC1311">
-                    <p style="color: navy"> Marine Corps Service Support Schools 29 Palms, California</p>
-                    <p style="color: navy">M936 Wrecker Operator</p>
-                    <p style="color: navy">1991</p>
+                    <p> Marine Corps Service Support Schools</p>
+                    <p>29 Palms, California</p>
+                    <p>1991</p>
+                    <p>M936 Wrecker Operator</p>
+                    <p>As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms, California.  I learned basic recovery techniques, welding (using arc welders and oxygen-acetylene torch), among other skills.  I graduated and returned to my unit.</p>
                 </div>
             </div>
             <div class="row">
@@ -68,10 +70,11 @@
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
                 <div class="col-md-9 usmc1 p-.5em background-color: #D8AF36">
-                    <p style="color: navy"> Marine Corps Service Support Schools</p>
-                    <p style="color: navy">Camp LeJeune, North Carolina</p>
-                    <p style="color: navy">Auto and Diesel Mechanics</p>
-                    <p style="color: navy">1987</p>
+                    <p> Marine Corps Service Support Schools</p>
+                    <p>Camp LeJeune, North Carolina</p>
+                    <p>1987</p>
+                    <p>Auto and Diesel Mechanics</p>
+                    <p>I arrived at Marine Corps Base Camp LeJeune in August 1987.  I attended classes on how to work on military tactical vehicles.  I was in the 3rd to last class to ever be taught to work on the M151 Jeep in the Marine Corps.  I graduated in December 1987 and began my career as a vehicle mechanic.</p>
                 </div>
             </div>
             <div class="row">
@@ -79,9 +82,11 @@
                     <img src="Images/Miramar_College_Icon.jpg" alt="Miramar College Icon" id="miramar">
                 </div>
                 <div class="col-md-9 miramar p-.5em background-color: #066A78">
-                    <p> Miramar College San Diego, California</p>
-                    <p>Diesel Mechanics</p>
+                    <p>Miramar Community College</p>
+                    <p>San Diego, California</p>
                     <p>1986</p>
+                    <p>Diesel Mechanics</p>
+                    <p>I attended 1 semester at this community college.  I worked on a 6V72 Detroit Diesel engine and learned how to overhaul and reassemble the engine.  Towards the end of the semester, I decided to enlist in the United States Marine Corps.</p>
                 </div>
             </div>
             <div class="row">
@@ -89,10 +94,11 @@
                     <img src="Images/Madison_High_Icon.jpg" alt="Madison High School Icon" class="image">
                 </div>
                 <div class="col-md-9 madison p-.5em background-color: #1F2C4C">
-                    <p style="color: White"> James Madison High School</p>
-                    <p style="color: White">San Diego, California</p>
-                    <p style="color: White">Basic and Auto Mechanics</p>
-                    <p style="color: White">1983 - 1986</p>
+                    <p> James Madison High School</p>
+                    <p>San Diego, California</p>
+                    <p>1983 - 1986</p>
+                    <p>Basic and Auto Mechanics</p>
+                    <p>At this San Diego High School I learned basic subjects such as English, Math, History as well as some specialty subjects such as Wood Working, Metal Shop and Auto Mechanics.</p>
                 </div>
             </div>
         </div>
