changed font color to use css sheet

--- a/academic.html
+++ b/academic.html
@@ -19,9 +19,8 @@
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
                 </div>
                 <div class="col-md-9 codeup p-.5em background-color: #7CB342">
-                    <p style="color: yellow">Codeup San
-                        Antonio, Texas (Virtual)</p>
-                    <p style="color: yellow">Full Stack Web Developer 2022 - 2023</p>
+                    <p>Codeup San Antonio, Texas (Virtual)</p>
+                    <p>Full Stack Web Developer 2022 - 2023</p>
                 </div>
             </div>
             <div class="row">
@@ -29,8 +28,8 @@
                     <img src="Images/DeVry_Icon.jpg" alt="DeVry Icon" class="image">
                 </div>
                 <div class="col-md-9 devry p-.5em background-color #CFA314">
-                    <p style="color: blue;"> DeVry College of New York</p>
-                    <p style="color: blue;">New York City, New York 10016 Computer Networking – 2015 – 2020</p>
+                    <p> DeVry College of New York</p>
+                    <p>New York City, New York 10016 Computer Networking – 2015 – 2020</p>
                 </div>
             </div>
             <div class="row">
@@ -38,8 +37,8 @@
                     <img src="Images/MCCC_Icon.jpg" alt="Mercer CCC Icon" class="image">
                 </div>
                 <div class="col-md-9 mercer p-.5em background-color: #00662F">
-                    <p style="color: gold;"> Mercer County Community College Trenton, New Jersey</p>
-                    <p style="color: gold;">Private Pilot – Unknown</p>
+                    <p> Mercer County Community College Trenton, New Jersey</p>
+                    <p>Private Pilot – Unknown</p>
                 </div>
             </div>
             <div class="row">
@@ -50,7 +49,8 @@
                     <p>Community College of The Air Force</p>
                     <p>Various Locations</p>
                     <p>Basic, Airman Leadership School</p>
-                    <p>Aviation Mechanic, Aerial Port 1997 – 2012</p>
+                    <p>Aviation Mechanic, Aerial Port</p>
+                    <p>1997 - 2012</p>
                 </div>
             </div>
             <div class="row">
