rearranged statement for DeVry

--- a/academic.html
+++ b/academic.html
@@ -29,7 +29,9 @@
                 </div>
                 <div class="col-md-9 devry p-.5em background-color #CFA314">
                     <p> DeVry College of New York</p>
-                    <p>New York City, New York 10016 Computer Networking – 2015 – 2020</p>
+                    <p>New York City, New York 10016</p>
+                    <p>Computer Networking</p>
+                    <p>2015 – 2020</p>
                 </div>
             </div>
             <div class="row">
