modified codeup education

--- a/academic.html
+++ b/academic.html
@@ -20,7 +20,8 @@
                 </div>
                 <div class="col-md-9 codeup p-.5em background-color: #7CB342">
                     <p>Codeup San Antonio, Texas (Virtual)</p>
-                    <p>Full Stack Web Developer 2022 - 2023</p>
+                    <p>Full Stack Web Developer</p>
+                        <p>2022 - 2023</p>
                 </div>
             </div>
             <div class="row">
