--- a/academic.html
+++ b/academic.html
@@ -18,17 +18,17 @@
                 <div class="col-md-3 background-color: #7CB342">
                     <img src="Images/codeup_logo.png" alt="Codeup Logo" class="image">
                 </div>
-                <div class="col-md-9 codeup p-.5em background-color: #7CB342">
+                <div class="col-md-9 codeup p-10 background-color: #7CB342">
                     <p>Codeup San Antonio, Texas (Virtual)</p>
                     <p>Full Stack Web Developer</p>
-                        <p>2022 - 2023</p>
+                    <p>2022 - 2023</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 background-color: #CFA314">
                     <img src="Images/DeVry_Icon.jpg" alt="DeVry Icon" class="image">
                 </div>
-                <div class="col-md-9 devry p-.5em background-color #CFA314">
+                <div class="col-md-9 devry p-10 background-color #CFA314">
                     <p> DeVry College of New York</p>
                     <p>New York City, New York 10016</p>
                     <p>Computer Networking</p>
@@ -39,7 +39,7 @@
                 <div class="col-md-3 background-color: #00662F">
                     <img src="Images/MCCC_Icon.jpg" alt="Mercer CCC Icon" class="image">
                 </div>
-                <div class="col-md-9 mercer p-.5em background-color: #00662F">
+                <div class="col-md-9 mercer p-10 background-color: #00662F">
                     <p> Mercer County Community College Trenton, New Jersey</p>
                     <p>Private Pilot – Unknown</p>
                 </div>
@@ -48,7 +48,7 @@
                 <div class="col-md-3 background-color: #172C7F">
                     <img src="Images/CCAF_Icon.jpg" alt="Community College Of The Air Force Icon" class="image">
                 </div>
-                <div class="col-md-9 ccaf p-.5em background-color: #172C7F">
+                <div class="col-md-9 ccaf p-10 background-color: #172C7F">
                     <p>Community College of The Air Force</p>
                     <p>Various Locations</p>
                     <p>Basic, Airman Leadership School</p>
@@ -60,53 +60,68 @@
                 <div class="col-md-3 background-color: #DC1311">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
-                <div class="col-md-9 usmc2 p-.5em background-color: #DC1311">
+                <div class="col-md-9 usmc2 p-10 background-color: #DC1311">
                     <p> Marine Corps Service Support Schools</p>
                     <p>29 Palms, California</p>
                     <p>1991</p>
                     <p>M936 Wrecker Operator</p>
-                    <p>As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms, California.  I learned basic recovery techniques, welding (using arc welders and oxygen-acetylene torch), among other skills.  I graduated and returned to my unit.</p>
+                    <p>As Operation Desert Storm was winding down, I was sent to Wrecker Operator class in 29 Palms,
+                        California. I learned basic recovery techniques, welding (using arc welders and oxygen-acetylene
+                        torch), among other skills. I graduated and returned to my unit.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 background-color: #D8AF36">
                     <img src="Images/USMC_Icon.jpg" alt="USMC Icon" class="image">
                 </div>
-                <div class="col-md-9 usmc1 p-.5em background-color: #D8AF36">
+                <div class="col-md-9 usmc1 p-10 background-color: #D8AF36">
                     <p> Marine Corps Service Support Schools</p>
                     <p>Camp LeJeune, North Carolina</p>
                     <p>1987</p>
                     <p>Auto and Diesel Mechanics</p>
-                    <p>I arrived at Marine Corps Base Camp LeJeune in August 1987.  I attended classes on how to work on military tactical vehicles.  I was in the 3rd to last class to ever be taught to work on the M151 Jeep in the Marine Corps.  I graduated in December 1987 and began my career as a vehicle mechanic.</p>
+                    <p>I arrived at Marine Corps Base Camp LeJeune in August 1987. I attended classes on how to work on
+                        military tactical vehicles. I was in the 3rd to last class to ever be taught to work on the M151
+                        Jeep in the Marine Corps. I graduated in December 1987 and began my career as a vehicle
+                        mechanic.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 background-color: #066A78">
                     <img src="Images/Miramar_College_Icon.jpg" alt="Miramar College Icon" id="miramar">
                 </div>
-                <div class="col-md-9 miramar p-.5em background-color: #066A78">
+                <div class="col-md-9 miramar p-10 background-color: #066A78">
                     <p>Miramar Community College</p>
                     <p>San Diego, California</p>
                     <p>1986</p>
                     <p>Diesel Mechanics</p>
-                    <p>I attended 1 semester at this community college.  I worked on a 6V72 Detroit Diesel engine and learned how to overhaul and reassemble the engine.  Towards the end of the semester, I decided to enlist in the United States Marine Corps.</p>
+                    <p>I attended 1 semester at this community college. I worked on a 6V72 Detroit Diesel engine and
+                        learned how to overhaul and reassemble the engine. Towards the end of the semester, I decided to
+                        enlist in the United States Marine Corps.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-3 background-color: #1F2C4C">
                     <img src="Images/Madison_High_Icon.jpg" alt="Madison High School Icon" class="image">
                 </div>
-                <div class="col-md-9 madison p-.5em background-color: #1F2C4C">
+                <div class="col-md-9 madison p-10 background-color: #1F2C4C">
                     <p> James Madison High School</p>
                     <p>San Diego, California</p>
                     <p>1983 - 1986</p>
                     <p>Basic and Auto Mechanics</p>
-                    <p>At this San Diego High School I learned basic subjects such as English, Math, History as well as some specialty subjects such as Wood Working, Metal Shop and Auto Mechanics.</p>
+                    <p>At this San Diego High School I learned basic subjects such as English, Math, History as well as
+                        some specialty subjects such as Wood Working, Metal Shop and Auto Mechanics.</p>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</div>
+<script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+        crossorigin="anonymous">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
