fixed links from main page to academic page

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
             <section class="col-md-6">
                 <div class="mt-0 row row-md-2">
-                    <h3 class="text-primary link"><a href="broken.html"> ACADEMIC</a></h3>
-                    <p class="link">To see where I've gone to school, click <a href="broken.html">here.</a></p>
+                    <h3 class="text-primary link"><a href="academic.html"> ACADEMIC</a></h3>
+                    <p class="link">To see where I've gone to school, click <a href="academic.html">here.</a></p>
                     <h3 class="text-primary link"><a href="broken.html"> PROFESSIONAL EXPERIENCE</a></h3>
                     <p class="link">To see where I've worked, click <a href="broken.html">here.</a></p><br><br>
                     <p></p>
