added code to insert li for each skill for main page

--- a/index.html
+++ b/index.html
@@ -71,11 +71,15 @@
             <div class="col-12">
                 <h3 class="text-primary" id="skills">SKILLS AND ABILITIES</h3>
                 <section>
-                    <ul class="row row-cols-3">
-                        <div id="skills-list" class="col-md-4">
-
-                        </div>
-                    </ul>
+                    <div class="row row-cols-3">
+                        <ul id="skills-list1" class="col-md-4"></ul>
+                    </div>
+                    <div>
+                        <ul id="skills-list2" class="col-md-4"></ul>
+                    </div>
+                    <div>
+                        <ul id="skills-list3" class="col-md-4"></ul>
+                    </div>
                 </section>
                 <hr class="sand">
             </div>
