added comments for code just entered

--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
             <!--resume content-->
             <div class="col-12">
                 <h3 class="text-primary" id="skills">SKILLS AND ABILITIES</h3>
+                <!--Skills are supposed to come in from variables on functions page-->
+                <!--Ask David or Cody-->
                 <section>
                     <div class="row row-cols-3">
                         <ul id="skills-list1" class="col-md-4"></ul>
@@ -83,7 +85,6 @@
                 </section>
                 <hr class="sand">
             </div>
-
             <section class="col-md-6">
                 <div class="mt-0 row row-md-2">
                     <h3 class="text-primary link"><a href="academic.html"> ACADEMIC</a></h3>
