added background colors for work history

--- a/work_history.html
+++ b/work_history.html
@@ -10,7 +10,7 @@
 </head>
 <body class="work">
 <div class="container-fluid">
-    <div class=" border: 2px solid black">
+    <div id="vetInd" class=" border: 2px solid black">
         <h2>Veteran Industries</h2>
         <p class="year">2018 - 2019</p>
         <p class="location">Coatesville, Pennsylvania</p>
@@ -29,7 +29,7 @@
             answered users' inquiries regarding computer software and hardware operation to resolve problems that
             occurred.</p>
     </div>
-    <div class=" border: 2px solid black">
+    <div class=" border: 2px solid black bg-dark">
         <h2>Uber</h2>
         <p class="year">2015 - 2018</p>
         <p class="location">New Jersey/Pennsylvania/Delaware/New York</p>
@@ -43,7 +43,7 @@
             mileage,
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
-    <div class=" border: 2px solid black">
+    <div id="lyft" class=" border: 2px solid black">
         <h2>Lyft</h2>
         <p class="year">2017 - 2018</p>
         <p class="location">New Jersey/Pennsylvania/Delaware/New York</p>
@@ -57,7 +57,7 @@
             mileage,
             costs, revenue and expenses and reported inappropriate behavior of passengers.</p>
     </div>
-    <div class=" border: 2px solid black">
+    <div class=" border: 2px solid black bg-info">
         <h2>New Jersey Air National Guard</h2>
         <p class="year">2003 - 2012</p>
         <p class="location">Joint Base McGuire/Dix/Lakehurst, New Jersey</p>
@@ -76,7 +76,7 @@
             received
             an Honorable Discharge.</p>
     </div>
-    <div class=" border: 2px solid black">
+    <div class=" border: 2px solid black bg-info">
         <h2>California Air National Guard</h2>
         <p class="year">2000 - 2002</p>
         <p class="location">San Diego, California</p>
@@ -98,7 +98,7 @@
             October 2002,
             my position was dissolved.</p>
     </div>
-    <div class=" border: 2px solid black">
+    <div class=" border: 2px solid black bg-info">
         <h2>Nevada Air National Guard</h2>
         <p class="year">1997 - 1999</p>
         <p class="location">Reno, Nevada</p>
@@ -119,7 +119,7 @@
             transportation
             of pallets after they were dropped, and other (civilian-type) vehicles.</p>
     </div>
-    <div class=" border: 2px solid black">
+    <div class=" border: 2px solid black bg-warning">
         <h2>All Points Towing</h2>
         <p class="year">1995 - 1999</p>
         <p class="location">Reno, Nevada</p>
@@ -128,7 +128,7 @@
             Nationally Certified Tow Operator</p>
         <p></p>
     </div>
-    <div class=" border: 2px solid black">
+    <div class=" border: 2px solid black bg-danger">
         <h2>United States Marine Corps/Marine Corps Reserves</h2>
         <p class="year">1987 - 1995</p>
         <p class="location">Various Locations</p>
