--- a/work_history.html
+++ b/work_history.html
@@ -119,7 +119,7 @@
             transportation
             of pallets after they were dropped, and other (civilian-type) vehicles.</p>
     </div>
-    <div class=" border: 2px solid black bg-warning">
+    <div id="apt" class=" border: 2px solid black bg-warning">
         <h2>All Points Towing</h2>
         <p class="year">1995 - 1999</p>
         <p class="location">Reno, Nevada</p>
