corrected text colors for all employment

--- a/work_history.html
+++ b/work_history.html
@@ -14,9 +14,9 @@
         <h2>Veteran Industries</h2>
         <p class="year">2018 - 2019</p>
         <p class="location">Coatesville, Pennsylvania</p>
-        <p>Assisted veterans using computers to file/check their benefits, claims, email, and search for housing and
+        <p id="vidd">Assisted veterans using computers to file/check their benefits, claims, email, and search for housing and
             employment.</p>
-        <p>This business is a government program located at the Coatesville VA Medical Center. It is designed to assist
+        <p id="vidt">This business is a government program located at the Coatesville VA Medical Center. It is designed to assist
             veterans
             find employment, housing and apply for benefits they may qualify for. I was employed in the Computer Room
             and I
@@ -47,8 +47,8 @@
         <h2>Lyft</h2>
         <p class="year">2017 - 2018</p>
         <p class="location">New Jersey/Pennsylvania/Delaware/New York</p>
-        <p>Driver/Partner</p>
-        <p>I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
+        <p id="lydd">Driver/Partner</p>
+        <p id="lyftt">I executed daily operations of vehicle safety inspections, cleaning and servicing of my vehicle with
             cleaners,
             fuel,
             lubricants and accessories. I assisted disabled passengers into and out of my vehicle. Operated phone
@@ -62,7 +62,7 @@
         <p class="year">2003 - 2012</p>
         <p class="location">Joint Base McGuire/Dix/Lakehurst, New Jersey</p>
         <p>General Aircraft Mechanic</p>
-        <p>In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on KC-135E/R Stratotanker
+        <p id="njangt">In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on KC-135E/R Stratotanker
             refueling
             airplanes. While at McGuire, I was trained to repair, service and refuel aircraft. I was trained on powered
             and
@@ -80,7 +80,7 @@
         <h2>California Air National Guard</h2>
         <p class="year">2000 - 2002</p>
         <p class="location">San Diego, California</p>
-        <p>Vehicle Mechanic/Secure Communications - At the end of 1999, I moved to San Diego where I was going to
+        <p id="cangt">Vehicle Mechanic/Secure Communications - At the end of 1999, I moved to San Diego where I was going to
             continue
             service in the Nevada Air National Guard. I discovered there was an Air National Guard Station near my home,
             so
@@ -102,7 +102,7 @@
         <h2>Nevada Air National Guard</h2>
         <p class="year">1997 - 1999</p>
         <p class="location">Reno, Nevada</p>
-        <p style="color: skyblue">Aerial Port - In September 1997, I joined the Air National Guard located at the Reno
+        <p id="angt">Aerial Port - In September 1997, I joined the Air National Guard located at the Reno
             International Airport. The Aerial Port handles all manner of duties associated with air travel. Most of the
             positions you see at the airport are handled by Aerial Port. Passenger Service, Food Service/Crew &
             Passenger
@@ -119,11 +119,11 @@
             transportation
             of pallets after they were dropped, and other (civilian-type) vehicles.</p>
     </div>
-    <div id="apt" class=" border: 2px solid black bg-warning">
-        <h2>All Points Towing</h2>
+    <div id="apt" class=" border: 2px solid black">
+        <h2 id="atpt">All Points Towing</h2>
         <p class="year">1995 - 1999</p>
         <p class="location">Reno, Nevada</p>
-        <p style="color: black">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul
+        <p id="aptt">Tow Truck Operator, Night Tow Manager, Dispatcher, Vehicle Mechanic, Long Haul
             Specialist,
             Nationally Certified Tow Operator</p>
         <p></p>
@@ -132,7 +132,7 @@
         <h2>United States Marine Corps/Marine Corps Reserves</h2>
         <p class="year">1987 - 1995</p>
         <p class="location">Various Locations</p>
-        <p style="color: #E2AD14">Basic Rifleman, Vehicle Mechanic, Wrecker Operator, Vehicle Driver, F/A - 18 Aircraft
+        <p id="mcdt">Basic Rifleman, Vehicle Mechanic, Wrecker Operator, Vehicle Driver, F/A - 18 Hornet Aircraft
             Mechanic</p>
         <p></p>
     </div>
