--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="css/resume.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 </head>
 <body class="main-page">
 <div class="container-fluid">
@@ -25,7 +25,7 @@
         <div class="narrative">
             <h2>Full Stack Web Developer</h2>
             <!--The id="age" is calculating the number of years I have held a job so the website will update automatically.-->
-            <p>With over <span id="age"></span> years in a wide array of career fields I have had many experiences that
+            <p id="mtd">With over <span id="age"></span>39 years in a wide array of career fields I have had many experiences that
                 qualify me for many
                 jobs. I have worked in landscaping, construction, and electronics fields. I spent 23 years in the United
                 States Marine Corps, Marine Corps Reserves, Air Force and Air National Guard. For most of those years I
@@ -47,10 +47,10 @@
         <div>
             <section class="row">
                 <!-- Contact Me link connects to contact.html page, LinkedIn link connects to my LinkedIn page and My GitHub link connects to my GitHub page -->
-                <p class="col-md-4 contact"><i class="fa-solid fa-phone"></i> <a href="contact.html"> Contact Me</a></p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-linkedin"></i> <a
+                <p class="col-md-4 contact"><i class="fa-solid fa-phone"></i> <a class="context" href="contact.html"> Contact Me</a></p>
+                <p class="col-md-4 contact"><i class="fa-brands fa-linkedin"></i> <a class="context"
                         href="http://www.linkedin.com/in/ralph-mccloskey-899680a4"> LinkedIn</a></p>
-                <p class="col-md-4 contact"><i class="fa-brands fa-github"></i> <a
+                <p class="col-md-4 contact"><i class="fa-brands fa-github"></i> <a class="context"
                         href="http://www.github.com/Rafagithub135">
                     My
                     GitHub Account</a>
@@ -89,8 +89,8 @@
                 <div class="mt-0 row row-md-2">
                     <h3 class="text-primary link"><a href="academic.html"> ACADEMIC</a></h3>
                     <p class="link">To see where I've gone to school, click <a href="academic.html">here.</a></p>
-                    <h3 class="text-primary link"><a href="broken.html"> PROFESSIONAL EXPERIENCE</a></h3>
-                    <p class="link">To see where I've worked, click <a href="broken.html">here.</a></p><br><br>
+                    <h3 class="text-primary link"><a href="work_history.html"> PROFESSIONAL EXPERIENCE</a></h3>
+                    <p class="link">To see where I've worked, click <a href="work_history.html">here.</a></p><br><br>
                     <p></p>
                     <p></p>
                 </div>
@@ -113,12 +113,12 @@
     </div>
 </div>
 <script src="js/functions.js"></script>
+<script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
 <script src="https://kit.fontawesome.com/68715d24c0.js" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
         crossorigin="anonymous">
 </script>
-<script>document.getElementById("age").innerHTML = calculateAge(new Date())</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
