removed es6 iife to allow age function to send to index page

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="narrative">
             <h2>Full Stack Web Developer</h2>
             <!--The id="age" is calculating the number of years I have held a job so the website will update automatically.-->
-            <p id="mtd">With over <span id="age"></span>39 years in a wide array of career fields I have had many experiences that
+            <p id="mtd">With over <span id="age"></span> years in a wide array of career fields I have had many experiences that
                 qualify me for many
                 jobs. I have worked in landscaping, construction, and electronics fields. I spent 23 years in the United
                 States Marine Corps, Marine Corps Reserves, Air Force and Air National Guard. For most of those years I
