--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
         <div class="narrative">
             <h2>Full Stack Web Developer</h2>
             <!--The id="age" is calculating the number of years I have held a job so the website will update automatically.-->
-            <p id="mtd">With over <span id="age"></span> years in a wide array of career fields I have had many experiences that
+            <p id="mtd">With over <span id="age"></span> years in a wide array of career fields I have had many
+                experiences that
                 qualify me for many
                 jobs. I have worked in landscaping, construction, and electronics fields. I spent 23 years in the United
                 States Marine Corps, Marine Corps Reserves, Air Force and Air National Guard. For most of those years I
@@ -47,11 +48,13 @@
         <div>
             <section class="row">
                 <!-- Contact Me link connects to contact.html page, LinkedIn link connects to my LinkedIn page and My GitHub link connects to my GitHub page -->
-                <p class="col-md-4 contact"><i class="fa-solid fa-phone"></i> <a class="context" href="contact.html"> Contact Me</a></p>
+                <p class="col-md-4 contact"><i class="fa-solid fa-phone"></i> <a class="context" href="contact.html">
+                    Contact Me</a></p>
                 <p class="col-md-4 contact"><i class="fa-brands fa-linkedin"></i> <a class="context"
-                        href="http://www.linkedin.com/in/ralph-mccloskey-899680a4"> LinkedIn</a></p>
+                                                                                     href="http://www.linkedin.com/in/ralph-mccloskey-899680a4">
+                    LinkedIn</a></p>
                 <p class="col-md-4 contact"><i class="fa-brands fa-github"></i> <a class="context"
-                        href="http://www.github.com/Rafagithub135">
+                                                                                   href="http://www.github.com/Rafagithub135">
                     My
                     GitHub Account</a>
                 </p>
@@ -73,14 +76,18 @@
                 <!--Skills are supposed to come in from variables on functions page-->
                 <!--Ask David or Cody-->
                 <section>
-                    <div class="row row-cols-3">
-                        <ul id="skills-list1" class="col-md-4"></ul>
-                    </div>
-                    <div>
-                        <ul id="skills-list2" class="col-md-4"></ul>
-                    </div>
-                    <div>
-                        <ul id="skills-list3" class="col-md-4"></ul>
+                    <div class="container">
+                        <div class="row row-cols-3">
+                            <div class="col-4">
+                                <ul id="skills-list1" class="col-md-4 m-0"></ul>
+                            </div>
+                            <div class="col-4">
+                                <ul id="skills-list2" class="col-md-4 m-0"></ul>
+                            </div>
+                            <div class="col-4">
+                                <ul id="skills-list3" class="col-md-4 m-0"></ul>
+                            </div>
+                        </div>
                     </div>
                 </section>
                 <hr class="sand">
