--- a/work_history.html
+++ b/work_history.html
@@ -61,7 +61,7 @@
         <h2>New Jersey Air National Guard</h2>
         <p class="year">2003 - 2012</p>
         <p class="location">Joint Base McGuire/Dix/Lakehurst, New Jersey</p>
-        <p>General Aircraft Mechanic</p>
+        <p id="njang">General Aircraft Mechanic</p>
         <p id="njangt">In 2003, I moved to New Jersey where I was trained as an aircraft mechanic on KC-135E/R Stratotanker
             refueling
             airplanes. While at McGuire, I was trained to repair, service and refuel aircraft. I was trained on powered
