added war card game to projects

--- a/academic.html
+++ b/academic.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="col-md-9 mercer p-10 background-color: #00662F">
                     <p> Mercer County Community College Trenton, New Jersey</p>
-                    <p>Private Pilot – Unknown</p>
+                    <p>Private Pilot</p>
                 </div>
             </div>
             <div class="row">
