--- a/development_projects.html
+++ b/development_projects.html
@@ -19,6 +19,7 @@
         <a href="https://github.com/orgs/McCloskey-Ramos-Coffee-Project/repositories"><li>Coffee Project McCloskey/Ramos</li></a>
         <a href="https://github.com/Rafagithub135/Weathermap"><li>Weather Map</li></a>
         <a href="https://github.com/Villegas-McCloskey-Movies/Movie-Project"><li>Movie Project Villegas/McCloskey</li></a>
+        <a href="https://github.com/Rafagithub135/Games/tree/main/War"><li>War Card Game Web Dev Simplified/McCloskey</li></a>
     </ol>
 </div>
 </body>
