added skills class to skills and abilities

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
                     <div class="container">
                         <div class="row row-cols-3">
                             <div class="col-4">
-                                <ul id="skills-list1" class="col-md-4 m-0"></ul>
+                                <ul id="skills-list1" class="col-md-4 m-0 skills"></ul>
                             </div>
                             <div class="col-4">
-                                <ul id="skills-list2" class="col-md-4 m-0"></ul>
+                                <ul id="skills-list2" class="col-md-4 m-0 skills"></ul>
                             </div>
                             <div class="col-4">
-                                <ul id="skills-list3" class="col-md-4 m-0"></ul>
+                                <ul id="skills-list3" class="col-md-4 m-0 skills"></ul>
                             </div>
                         </div>
                     </div>
