edited css working on responsivness for USMC emblems

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="row row-cols-3">
             <section class="col-3 emblem-left">
-                <a href="https://www.marines.com"><img src="./Images/EGA_right.jpg" alt="USMC Emblem Right"></a>
+                <a href="https://www.marines.com" class="emblem"><img src="./Images/EGA_right.jpg" alt="USMC Emblem Right"></a>
             </section>
             <section class="col-6">
                 <h1 class="py-4">Ralph James McCloskey</h1>
