working on emblems

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="py-4">Ralph James McCloskey</h1>
             </section>
             <section class="col-3 emblem-right">
-                <a href="https://www.marines.com"><img src="./Images/EGA_left.jpg" alt="USMC Emblem Left"></a>
+                <a href="https://www.marines.com" class="emblem"><img src="./Images/EGA_left.jpg" alt="USMC Emblem Left"></a>
             </section>
         </div>
         <div class="narrative">
