--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
         <div class="row row-cols-3">
             <section class="col-3 emblem-left">
-                <a href="https://www.marines.com"><img src="./Images/EGA_right.jpg" alt="USMC Emblem Right"></a>
+                <a href="https://www.marines.com"><img class="emblem" src="./Images/EGA_right.jpg" alt="USMC Emblem Right"></a>
             </section>
             <section class="col-6">
-                <h1 class="py-4">Ralph James McCloskey</h1>
+                <h1 class="name py-4">Ralph James McCloskey</h1>
             </section>
             <section class="col-3 emblem-right">
-                <a href="https://www.marines.com"><img src="./Images/EGA_left.jpg" alt="USMC Emblem Left"></a>
+                <a href="https://www.marines.com"><img class="emblem" src="./Images/EGA_left.jpg" alt="USMC Emblem Left"></a>
             </section>
         </div>
         <div class="narrative">
